...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="gfs-H7-SH8">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
...
                                </constraints>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" image="settings"/>
                                <connections>
                                    <segue destination="Yx2-Cq-wQE" kind="popoverPresentation" identifier="settingsSegue" popoverAnchorView="hiV-RF-kUX" id="I6D-Qn-xNa">
...
                                    <constraint firstAttribute="height" constant="126" id="XJ3-1N-gwD"/>
                                </constraints>
                                <state key="normal" image="maps"/>
                                <connections>
                                    <segue destination="ani-Vu-pHf" kind="show" id="BTP-xI-hV0"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8FU-Kr-KXV">
                                <rect key="frame" x="20" y="28" width="75" height="75"/>
                                <state key="normal" image="back">
                                    <color key="titleColor" red="0.27810045811518325" green="0.27810045811518325" blue="0.27810045811518325" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                        <rect key="frame" x="181" y="8" width="239" height="29"/>
                                        <segments>
                                            <segment title="Kilometers"/>
                                            <segment title="Miles"/>
                                            <segment title="Knots"/>
                                        </segments>
                                        <color key="tintColor" red="1" green="0.3411764705882353" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <rect key="frame" x="138" y="84" width="325" height="29"/>
                                        <segments>
                                            <segment title="High Performance Mode"/>
                                            <segment title="Battery Reserve Mode"/>
                                        </segments>
                                        <color key="tintColor" red="1" green="0.3411764705882353" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <segments>
                                            <segment title="State"/>
                                            <segment title="City"/>
                                            <segment title="Sub-Locality"/>
                                            <segment title="Street"/>
                                        </segments>
                                        <color key="tintColor" red="1" green="0.3411764705882353" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
...
